--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile ('eu.livotov.labs:zxscanlib:2.0.0-SNAPSHOT@aar') {
+        transitive = true
+    }
 }
