--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sg.edu.nus.micphone2" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="sg.edu.nus.micphone2">
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        tools:replace="android:label" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -40,19 +42,23 @@
         <activity
             android:name=".PairingActivity"
             android:label="@string/title_activity_pairing"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity">
         </activity>
         <activity
             android:name=".NfcPairingActivity"
-            android:label="@string/title_activity_nfc_pairing" >
+            android:label="@string/title_activity_nfc_pairing"
+            android:parentActivityName=".PairingActivity">
         </activity>
         <activity
             android:name=".QrCodePairingActivity"
-            android:label="@string/title_activity_qr_code_pairing" >
+            android:label="@string/title_activity_qr_code_pairing"
+            android:theme="@style/AppQrPairingActivityTheme"
+            android:parentActivityName=".PairingActivity">
         </activity>
         <activity
             android:name=".ManualPairingActivity"
-            android:label="@string/title_activity_manual_pairing" >
+            android:label="@string/title_activity_manual_pairing"
+            android:parentActivityName=".PairingActivity">
         </activity>
     </application>
 
