Implemented NFC pairing.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.NFC" />
 
     <application
         android:hardwareAccelerated="false"
@@ -29,6 +30,11 @@
             android:label="@string/title_activity_mic"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="application/vnd.sg.edu.nus.micphone2" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".AboutActivity"
