--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,14 +71,10 @@
             android:theme="@style/AppQrPairingActivityTheme" >
         </activity>
         <activity
-            android:name=".ManualPairingActivity"
-            android:label="@string/title_activity_manual_pairing"
-            android:parentActivityName=".PairingActivity" >
-        </activity>
-        <activity
             android:name=".SpeakerActivity"
             android:label="@string/title_activity_speaker"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sg.edu.nus.micphone2.MainActivity" />
